# tdx

./: CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Justfile  README.md  cliff.toml  index.html
.github/: FUNDING.yml  bors.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
public/: manifest.json
scripts/: release.sh
src/: content.rs  main.rs
src/content/: mod.rs
src/footer/: mod.rs
src/header/: mod.rs
