[package]
name = "tdx"
version = "0.1.1"
description = "..."
authors = ["xTekC"]
repository = "https://github.com/xTekC/tdx"
readme = "README.md"
homepage = "https://github.com/xTekC/tdx"
documentation = "https://github.com/xTekC/tdx/blob/main/README.md"
categories = ["web-programming"]
keywords = ["wasm", "web"]
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.70.0"
edition = "2021"
license = "MPL-2.0"


[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
